@@ -1,3 +1,11 @@
+2016-03-05  Sam Weinig  <sam@webkit.org>
+
+        Revert usage of autofill field name for use with UITextInputTraits
+        until our bots can catch up.
+
+        * UIProcess/ios/WKContentViewInteraction.mm:
+        (-[WKContentView textInputTraits]):
+
 2016-03-05  Chris Dumez  <cdumez@apple.com>
 
         Consolidate RuntimeApplicationChecks and RuntimeApplicationChecksIOS
